Fixed touch detection problem - ultimately a z-index stacking/pointer-events issue, since other elements are positioned on top of target canvas.

--- a/style.css
+++ b/style.css
@@ -371,9 +371,11 @@ button:hover {
 }
 
 .screen-border {
+    pointer-events: none;
     position: absolute;
     width: 100%;
     height: 99.9%;
+    z-index: 1;
 }
 
 .game-screen .msg {
@@ -385,13 +387,13 @@ button:hover {
     text-align: center;
     transition: 0.3s ease-out;
     width: 90%;
+    z-index: 2;
 }
 
 .game-screen canvas {
     position: absolute;
     width: 92%;
     height: 95%;
-    z-index: -1;
 }
 
 .game-screen #static-canvas {
@@ -425,7 +427,7 @@ button:hover {
     max-height: 250px;
     transition: 0.5s ease-in;
     transform: scale(1);
-    z-index: 1;
+    z-index: 5;
 }
 
 #gameover-screen.hide {
